tests/fsharp/typecheck/sigs/neg_byref_12.fs
module Test
#nowarn "1175"
type M4 = Nested of byref<int>         (* trap: byref union constr fields *)
